<resources>
    <string name="app_name">SubmissionJP</string>
    <string name="appbar_scrolling_view_behavior" translatable="false">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="movie">Movie</string>
    <string name="tvshows">TV Shows</string>
    <string name="bookmark">Bookmark</string>
    <string name="title">Title</string>
    <string name="genre">Genre</string>
    <string name="year">Year</string>
    <string name="description">Description</string>
    <string name="overview">Overview</string>
    <string name="rating">Rating</string>
    <string name="favorite">Favorite</string>
    <string name="removeFav">is Success Removed from Favorite list</string>
    <string name="addFav">is Success Added to Favorite list</string>
    <string name="copyright" translatable="false">COPYRIGHT ©2021</string>
</resources>